location and footer

--- a/index.html
+++ b/index.html
@@ -300,6 +300,74 @@
 		</div><!-- container -->
 
 	</section><!-- subsecribtion -->
+
+	<section id="location">
+		<div class="container">
+			<h2> Location & register</h2>
+			<hr />
+			<div class="row">
+				<div class="map col-6 ">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11416.167431886004!2d31.37856119734183!3d31.
+						036235767724175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f79da49712c32d%3A0x362ce250f7f5a463!2sPapa%20John&#39;
+						s%20Pizza!5e0!3m2!1sen!2seg!4v1663499480343!5m2!1sen!2seg" width="100%" height="450" style="border:0;"
+						allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div><!-- map -->
+				<div class="form col-6">
+					<form>
+						<div class="row">
+							<div class="col-4"> <label for="">Name</label></div><!-- name--4 -->
+							<div class="col-8"> <input type="text" placeholder="Name"></div><!-- input--8 -->
+						</div><!-- row name -->
+
+						<div class="row">
+							<div class="col-4"> <label for="">Email</label></div><!-- name--4 -->
+							<div class="col-8"> <input type="email" placeholder="Email"></div><!-- input--8 -->
+						</div><!-- row email-->
+						<div class="row">
+							<div class="col-4"><label for="">how did you find us ?</label></div><!-- 4 select -->
+							<div class="col-4">
+								<select name="" id="">
+									<option value="">Facebook</option>
+									<option value=""> Friends and family</option>
+									<option value="">WebSite</option>
+								</select>
+							</div><!-- 4 select -->
+						</div><!-- row --select -->
+						<div class="row">
+							<div class="col-4">
+								<label for="">New settler</label>
+							</div><!-- 4 label -->
+							<div class="col-8">
+								<input type="checkbox" name="" id=""> YES please
+							</div>
+						</div>
+
+						<div class="row teaxtarea">
+							<div class="col-4">
+								<label for="">drop us a letter</label>
+							</div><!-- 4 label -->
+							<div class="col-8">
+								<textarea rows="5" cols=""></textarea>
+							</div><!-- 8--teaxtarea -->
+						</div><!-- row--teaxtarea  -->
+						<div class="row ">
+							<div class="col-4">
+							</div><!-- 4--button  -->
+							<div class="col-8">
+								<button type="submit">Submit</button>
+							</div><!-- 8--button -->
+						</div><!-- row--button  -->
+					</form>
+				</div>
+			</div><!-- row -->
+
+		</div><!-- container -->
+	</section>
+
+	<footer>
+		<p>website by:Mohamed Elbahy</p>
+	</footer>
+
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script>
