adding footer to the project

--- a/index.html
+++ b/index.html
@@ -365,7 +365,28 @@
 	</section>
 
 	<footer>
-		<p>website by:Mohamed Elbahy</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<ul class="footerNav ">
+						<li><a href=""> About us</a> </li>
+						<li><a href=""> Blog</a></li>
+						<li><a href=""> Press</a></li>
+						<li><a href=""> IOS App</a> </li>
+						<li><a href=""> Android App</a> </li>
+					</ul>
+				</div><!-- left footer -->
+				<div class="col-md-6">
+					<ul class="socialNav">
+						<li><a href=""><i class="fa-brands fa-facebook fa-2x"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-twitter fa-2x"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+						<li><a href=""><i class="fa-brands fa-telegram fa-2x"></i></a></li>
+					</ul>
+				</div><!-- right footer -->
+			</div><!-- row -->
+			<p>Created By Mohamed Elbahy &copy; 2022.</p>
+		</div><!-- container -->
 	</footer>
 
 	<script src="js/bootstrap.bundle.min.js"></script>
